test/fixtures/errors/es-namespace-export/input.mjs
export * as _ from 'lodash-es';
